--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
     <target name="build">
         <exec executable="docker" taskname="docker">
             <arg value="build"/>
+            <arg value="--pull"/>
             <arg value="--tag"/>
             <arg value="sebastianbergmann/m68k-amigaos-bebbo:latest"/>
             <arg path="${basedir}"/>
